# delf

./: README.md  delf.py  load.py  pyproject.toml
src/: delf.py
test/: compile_commands.json
